scss/hero.scss
#hero {
	position: relative;
	height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	font-size: 48px;
	color: #fff;
	width: 100%;
	// }

	// .hero::after {
	// content: " ";
	// position: absolute;
	// top: 0;
	// right: 0;
	// bottom: 0;
	// left: 0;
	// width: 100%;
	// margin: 0;
	background-size: cover;
	background-position: center center;

	// background-image: url("http://source.unsplash.com/pjxzpoYo5Gs");
	background-image: url("/img/PolarisHeroImage.jpg");

	.header-main {
		letter-spacing: 50px;
		h1 {
			margin: 0;
		}
	}
	.header-subtext {
		letter-spacing: 25px;
		text-align: center;
		h2 {
			margin: 0;
			margin-left: -25px;
		}
	}
}

